# GKD

./: .gitignore  README.md  sh.exe.stackdump  部署说明文档.md
codes/: README.md
codes/client/: Cargo.toml  log4rs.yaml
codes/client/src/: client.rs  main.rs
codes/client/src/client/: WebSocket.rs  client.rs  com.rs  connect.rs  fileDetector.rs
codes/client/src/client/WebSocket/: WebSocket.rs
codes/client/src/client/client/: SynItem.rs  client.rs
codes/client/src/client/com/: Decoder.rs  Encoder.rs
codes/client/src/client/connect/: FileTransporter.rs  FragmentManager.rs  RequestManager.rs  ServerConnecter.rs
codes/client/src/client/fileDetector/: FileAttrs.rs  FileUploader.rs  FileUtil.rs  FolderScanner.rs
codes/server/: Cargo.toml  log4rs.yaml
codes/server/src/: main.rs  server.rs
codes/server/src/server/: DFS_server.rs  controlConnect.rs  dataConnect.rs  database.rs
codes/server/src/server/controlConnect/: ClientThread.rs  ServerThread.rs
codes/server/src/server/dataConnect/: ClientThread.rs  FileTransporter.rs  ServerThread.rs
codes/server/src/server/database/: AnotherRequestItem.rs  DeviceItem.rs  FileItem.rs  Query.rs  RequestItem.rs
codes/web工程/backend/: Cargo.toml
codes/web工程/backend/src/: com.rs  database.rs  main.rs  userManagement.rs
codes/web工程/backend/src/com/: Decoder.rs  Encoder.rs
codes/web工程/backend/src/database/: AnotherRequestItem.rs  DeviceItem.rs  FileItem.rs  Query.rs
codes/web工程/backend/src/userManagement/: FileDownloader.rs  FileUploader.rs  GetFileList.rs  UserLogin.rs  UserReg.rs
learning_records/: lyf-Notes.md  (+4 more)
(+37 files in other folders)
