[package]
name = "client_test"
version = "0.1.0"
authors = ["lyf-00 <55793884+lyf-00@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon-erasure = "4.0"
lazy_static = "1.4.0"
log = "0.4.8"
log4rs = "0.10.0"
websocket = "0.26.2"