[package]
name = "server_test"
version = "0.1.0"
authors = ["lyf-00 <55793884+lyf-00@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "17.0.0"
chrono = "0.4"
rand = "0.6.0"
log = "0.4.8"
log4rs = "0.10.0"
